fixed z-index issue on navigation

--- a/src/components/Turnstile/index.module.scss
+++ b/src/components/Turnstile/index.module.scss
@@ -1,7 +1,7 @@
 .widget {
   min-height: 65px;
   overflow: hidden;
-  width: 100%;
+  width: 20%;
 
   iframe {
     max-width: 100%;
