--- a/src/components/ui/Modal/Modal.module.scss
+++ b/src/components/ui/Modal/Modal.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 51;
   animation: fadeIn 0.2s ease forwards;
   padding: 1rem;
 }
